--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "BOTUNUZUN_TOKENI",
-    "DeveloperID": "SIZIN_IDNIZ",
-    "DestekSunucuLink": "DESTEK_SUNUCUNUZUN_LINKI"
+    "token": "MTE5MTY2NDU5OTc1NDM1NDcxOQ.GvF7Tb.g0ylNnM3HigTIb0alEW2Ec97YAz-J6G36vxvfI",
+    "DeveloperID": "1049657594970640415",
+    "DestekSunucuLink": "https://discord.com/invite/VtMgVnYA"
 }
