--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "discord.js": "^14.7.1",
     "glob": "^9.2.1",
     "path": "^0.12.7",
-    "mzrdjs": "^0.0.27"
+    "mzrdjs": "^0.0.27",
+    "mzrdb": "^1.1.0"
   }
 }
